# RFxStarterKit-0.2

./: .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  AGENT_VS_SKILL_ARCHITECTURE_ANALYSIS.md  AUTHENTICATION_FIX_COMPLETE.md  CHANGELOG.md  CLEANUP_SCRIPT.bat  COMPLETE_END_TO_END_ARCHITECTURE.md  CONTRIBUTING.md  Dockerfile.rfp-analyzer  Dockerfile.scoping-architect  FINAL_CONFIGURATION_SUMMARY.md  INTEGRATION_COMPLETE.md  INTEGRATION_SUMMARY.md  LICENSE  LLM_AUTHENTICATION_UNIFIED.md  LLM_PROVIDER_GENERALIZATION.md  PHASE0_INTEGRATION_TECHNICAL_DEEP_DIVE.md  PHASE0_MULTI_DOCUMENT_EXPLAINED.md  QUICK_START_INTEGRATED.md  QUICK_START_SCOPING_INTEGRATION.md  README.md  README_INTEGRATED.md  RFP_ANALYZER_REVERSE_ENGINEERING_REPORT.md  SCOPING_ARCHITECT_INTEGRATION.md  START_ALL.bat  START_ALL.ps1  START_ALL.sh  START_APPLICATION.md  SYSTEM_READY_SUMMARY.md  UNIFIED_LLM_CONFIGURATION_COMPLETE.md  check_html.py  debug_json_error_attempt_1.txt  docker-compose.yml  github-checkin-plan.md  initialize_git.ps1  pyproject.toml  pytest.ini  requirements.txt  (+2 more)
document-consolidator/phase0_router/: README.md  pyproject.toml  requirements.txt  run_phase0.py
document-consolidator/phase0_router/docs/: INTEGRATION.md  phase0_ui_patch.html
document-consolidator/phase0_router/phase0/: __init__.py  api.py  assembler.py  chunker.py  classifier.py  conflict_detector.py  llm_client.py  router.py  schema.py  utils.py
document-consolidator/phase0_router/tests/: test_phase0.py
rfp-analyzer/: .env.example  CREATE_COLLAPSIBLE_HTML.md  Dockerfile  ENHANCED_WEB_APP_README.md  HTML_GROUPING_GUIDE.md  HTML_PREVIEW_IMPLEMENTATION.md  HTML_VIEWER_IMPLEMENTATION_GUIDE.md  MCP_SERVER_SETUP.md  QUICK_REFERENCE.md  QUICK_START_ENHANCED_APP.md  README.md  REMOTE_CONTEXT_GUIDE.md  SAP_ANALYZER_README.md  SAP_Analysis_Test.xlsx  START_SAP_ANALYZER.md  WEB_INTERFACE_GUIDE.md  debug_json_error_attempt_1.txt  debug_json_error_attempt_2.txt  debug_json_error_attempt_3.txt  docker-compose.yml  logging_config.py  main.py  mcp_server.py  pyproject.toml  requirements.txt  rfp_analyzer_direct.html  sap_analyzer_app.py  sap_analyzer_cli.py  test_both_html_exports.py  test_collapsible_html.py  test_collapsible_module.py  test_excel_export.py  test_html_export.py  test_llm_connection.py  test_viewer.html  web_app.py  web_app_enhanced.py
rfp-analyzer/agents/: __init__.py  ambiguity.py  base.py  compliance.py  functional.py  nonfunctional.py  risk.py  sap_mapping_agent.py  synthesizer.py
rfp-analyzer/app/: __init__.py  main.py  session_store.py
rfp-analyzer/app/routers/: __init__.py  analysis.py  architecture.py  clarifications.py  exports.py  requirements.py  solution_mapping.py
rfp-analyzer/app/services/: __init__.py  claude_service.py  export_service.py  pipeline_service.py
rfp-analyzer/app/templates/: base.html  home.html  index.html  review.html  unified.html
rfp-analyzer/core/: embedder.py  ingestor.py  phase0_adapter.py  schemas.py  state.py  table_processor.py
rfp-analyzer/examples/: context_studio_example.py  invoke_ica_agent.js  invoke_ica_agent.py
rfp-analyzer/extn/: SAP_Mapping_Agent.jsx
rfp-analyzer/mcp_servers/: README.md
rfp-analyzer/mcp_servers/knowledge_base_server/: ACTIVATION_GUIDE.md  CONTEXTFORGE_INTEGRATION.md  MANUAL_REGISTRATION_GUIDE.md  README.md  __init__.py  __main__.py  add_execution_config.py  config.json  register_in_contextforge.py  server.py
rfp-analyzer/observability/: __init__.py  config.py  decorators.py  diagnose_phoenix.py  metrics.py  phoenix_tracer.py  test_phoenix_native.py  test_phoenix_otel.py
rfp-analyzer/observability/scripts/: check_phoenix_connection.py  (+1 more)
rfp-analyzer/org_context/: CONTEXT_STUDIO_IMPORT_SUMMARY.md  CONTEXT_STUDIO_MIGRATION_GUIDE.md  CONTEXT_STUDIO_QUICK_START.md  README.md  REMOTE_IMPORT_GUIDE.md  SCHEMA_FILES_SUMMARY.md  TESTING_GUIDE.md  __init__.py  context_manager.py  context_manager.py.backup  context_manager_updated.py  context_schema.py  context_studio_client.py  context_studio_integration.py  context_studio_parser.py  mcp_context_client.py  remote_loaders.py  table_templates.py
rfp-analyzer/outputs/: exporter.py  html_exporter.py  html_exporter_by_module.py  html_exporter_by_module_backup.py  html_exporter_by_module_collapsible.py
rfp-analyzer/scripts/: check_llm_connection.py
scoping-architect/: AUTO_ENRICHMENT.md  CURRENT_ISSUES.md  ENRICHMENT_IMPROVEMENT_PLAN.md  ENRICHMENT_IMPROVEMENT_RESULTS.md  ESSENTIAL_FILES_FOR_GSC_WORKFLOW.md  GAP_ANALYSIS.md  GSC_AUTOFILL_DEBUG.md  GSC_FIELD_MAPPING.md  GSC_FIELD_MAPPING_ACTUAL.md  GSC_INTEGRATION_SUMMARY.md  GSC_INTEGRATION_TEST.md  GSC_USAGE_GUIDE.md  HOW_TO_USE.md  IMPLEMENTATION_COMPLETE.md  IMPROVEMENTS_SUMMARY.md  INTEGRATION_SUMMARY.md  JSON_TRUNCATION_FIX.md  JSON_TRUNCATION_SOLUTION.md  LOGGING_SUMMARY.md  PIPELINE.md  README.md  RFP_GSC_BRIDGE_USAGE.md  RFP_VS_GSC_GAP_ANALYSIS.md  RFP_to_GSC_Bridge_v2.html  RFP_to_GSC_Bridge_v3.html  RFP_to_GSE_Bridge_v2.html  RFP_to_GSE_Bridge_v3.html  SAP_MODULE_IMPLEMENTATION.md  SCOPING_METADATA_EXTRACTOR_EXPLAINED.md  SERVER_RESTART_REQUIRED.md  SETUP_COMPLETE.md  UI_INTEGRATION_COMPLETE.md  __init__.py  app.py  check_routes.py  config.py  example_usage.py  gse_template_api.py  llm_client.py  pyproject.toml  (+8 more)
scoping-architect/gse-template/: QUICK_START.md  README.md  models.py  questionnaire_form.html
scoping-architect/scoping_designer/: __init__.py  designer.py  enricher.py  exporters.py  models.py  preferences.py  prompts.py  scoping_metadata_extractor.py
scoping-architect/scripts/: check_architecture_flow.py  check_enrichment_improvements.py
scoping-architect/tests/: README.md  conftest.py  test_models.py  test_sap_integration.py
(+70 files in other folders)
