[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rfp-analyzer"
version = "0.1.0"
description = "Multi-agent RFP analysis service"
requires-python = ">=3.9"
dependencies = [
    # shared base
    "anthropic>=0.40.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.27.0",
    # service-specific
    "langchain>=0.1.0",
    "langgraph>=0.0.20",
    "langchain-anthropic>=0.1.0",
    "langchain-openai>=0.1.0",
    "openai>=1.0.0",
    "python-docx>=1.0.0",
    "typer>=0.9.0",
    "rich>=13.0.0",
    "structlog>=23.0.0",
    "openpyxl>=3.1.0",
    "pyyaml>=6.0.0",
    "python-multipart>=0.0.9",
    "jinja2>=3.1.0",
    "aiofiles>=23.2.0",
]

[tool.setuptools.packages.find]
# Discover every package that has an __init__.py under rfp-analyzer/
where = ["."]
include = [
    "agents*",
    "core*",
    "outputs*",
    "org_context*",
    "observability*",
    "mcp_servers*",
    "app*",
    "extn*",
]

# Entry points so `rfp-analyzer` and `rfp-web` work after install
[project.scripts]
rfp-analyzer = "main:app"
rfp-web      = "web_app:app"
