[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "phase0-router"
version = "0.1.0"
description = "Phase 0 multi-document classification and routing"
requires-python = ">=3.9"
dependencies = [
    "anthropic>=0.40.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.27.0",
    "python-multipart>=0.0.9",
    "pypdf>=4.2.0",
    "python-docx>=1.1.2",
    "openpyxl>=3.1.2",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["phase0*"]
